2008-02-27  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_dialog_update_num_files),
	(file_transfer_dialog_response), (file_transfer_dialog_finalize),
	(file_transfer_dialog_set_prop), (file_transfer_dialog_class_init),
	(file_transfer_dialog_init), (file_transfer_dialog_get_type),
	(file_transfer_job_update_before),
	(file_transfer_job_update_after), (file_transfer_job_destroy),
	(file_transfer_dialog_done), (file_transfer_dialog_cancel),
	(file_transfer_job_schedule), (file_transfer_dialog_copy_async):
	* file-transfer-dialog.h: port to gio

2008-02-25  Thomas Wood  <thos@gnome.org>

	* theme-thumbnail.c: (message_from_child): Return FALSE on error or EOF,
	which should also fix bug 516413, in addition to checking for G_IO_HUP.

2008-02-25  Thomas Wood  <thos@gnome.org>

	* theme-thumbnail.c:

	(create_meta_theme_pixbuf), (create_metacity_theme_pixbuf):
	Use the new meta_preview_get_clip_region() function in Metacity to fix
	bug 460018 (Rounded window borders don't get rendered correctly).

	(message_from_child): Do not attempt to read from the pipe when
	the connection has been broken. Fixes bug 516413 (Theme thumbnailer
	causes UI to stop drawing when encountering an error).

2008-02-19  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_dialog_update_num_files): fix
	small leak

2008-01-25  Jens Granseuer  <jensgr@gmx.net>

	* capplet-stock-icons.c: (capplet_init_stock_icons): remove code
	for obsolete "stock" icons

2007-12-21  Luca Ferretti  <elle.uca@libero.it>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(gnome_theme_meta_info_free), (gnome_theme_meta_info_print),
	(gnome_theme_meta_info_compare):
	* gnome-theme-info.h:
	Add support for WindowTitleFont and DocumentsFont keys in
	meta-themes. See bug #504250

2007-12-14  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme): don't
	even try to open NULL filenames, and don't leak filenames when